# weightbud-c

./: CMakeLists.txt  CMakePresets.json  README.md
assets/: style.css
include/: gui.h  storage.h
src/: gui.c  main.c  storage.c
